--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "crypto-js": "^3.1.9-1",
     "echarts": "^4.1.0",
     "element-ui": "^2.4.4",
+    "js-file-download": "^0.4.4",
     "js-md5": "^0.7.3",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.2",
