--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "element-ui": "^2.4.4",
     "js-file-download": "^0.4.4",
     "js-md5": "^0.7.3",
+    "pinyin-match": "^1.0.8",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.2",
     "vue-router": "^3.0.1"
